# rust_derive_hash_fast

./: Cargo.toml  README.md
benches/: hash.rs  hashset.rs
src/: lib.rs
